--- a/src/main/webapp/partials/account-view.html
+++ b/src/main/webapp/partials/account-view.html
@@ -26,7 +26,7 @@
               <h4 class="panel-title">
               {{account.name}}
               <span class="label label-danger" ng-hide="account.markedForDelete == -1" style="margin-left: 20px;">
-              {{'MARKED FOR DELETE (Estimated Delete Time:' + (account.markedForDelete|date:'yyyy-MM-dd HH:mm:ss':'UTC') + ')'}}
+              {{'MARKED FOR DELETE (Estimated Delete Time:' + ((account.markedForDelete + (24 * 60 * 60 * 1000))|date:'yyyy-MM-dd HH:mm:ss':'UTC') + ')'}}
               </span>
               <span class="label label-danger" ng-hide="!account.expired_" style="margin-left: 20px;">
               {{'EVE ACCESS KEY EXPIRED AT ' + (account.expires_|date:'yyyy-MM-dd HH:mm:ss':'UTC')}}
