--- a/src/main/webapp/partials/main-news.html
+++ b/src/main/webapp/partials/main-news.html
@@ -59,7 +59,7 @@
         Your synchronized data is always available in <b>bulk</b> form.  We recognize that not everyone will want to use 
         the EveKit APIs to access their data.  You can request a snapshot of your data directly from the accounts page at
         any time.  We'll send you the snapshot in CSV format.  We don't trap your data behind our APIs, you can
-        get a complete snapshot any time you like.  See the <a href="#/account/faq" title="Account FAQ">Account FAQ</a> 
+        get a complete snapshot any time you like.  See the <a href="https://groups.google.com/d/msg/orbital-enterprises/SZ_0uG117Ws/P95KQORAAQAJ" title="Account FAQ">Account FAQ</a> 
         for details on how often snapshots are created.
         </td>
       </tr>
@@ -111,14 +111,14 @@
         If you prefer offline access, you can click "Download Latest Snapshot" from
         the account list (we'll download your data as a zip of CSV files).  
         You can find more information about accounts and access keys on the 
-        <a href="#/account/faq" title="Account FAQ">Account FAQ</a>.
+        <a href="https://groups.google.com/d/msg/orbital-enterprises/SZ_0uG117Ws/P95KQORAAQAJ" title="Account FAQ">Account FAQ</a>.
         </td>
       </tr>
       </table>
       
       <h4 style="padding-top: 1em; padding-bottom: 1em;">Need more help?</h4>
 
-      Check out our <a href="#/main/guide" title="Guides">Guides, Tutorials and Videos</a> section!
+      Check out our <a href="http://blog.orbital.enterprises/p/evekit-guides-videos-and-tutorials.html" title="Guides">Guides, Tutorials and Videos</a>!
       
       </td>
       </tr>
@@ -156,7 +156,7 @@
       <ul>
       <li> EveKit is provided by Dark Planet Ventures (DPVT), a one player - multiple alts extremely tiny EVE corporation.
       <li> Federated login decals from <a href='https://github.com/necolas/css3-social-signin-buttons' target="_blank">CSS3 Social Signin Buttons</a>.
-      <li> Static EVE data is based off of the static dump packages provided by <a href="https://www.fuzzwork.co.uk/dump" target="_blank">Steve Ronuken</a>.
+      <li> Static EVE data is converted from CCP's export using <a href="https://bitbucket.org/Desmont_McCallock/evesdetosql" target="_blank">Desmont McCallock's EVE SDE to SQL</a> tool. 
       <li> Last but not least, many thanks to the contributors and documentors at the <a href='http://eveonline-third-party-documentation.readthedocs.org/' target="_blank">EVE Third Party Documentation Project</a>. 
       </ul>
       </div>
