--- a/src/main/webapp/partials/account-view.html
+++ b/src/main/webapp/partials/account-view.html
@@ -37,7 +37,7 @@
                   <button type="button" class="btn btn-default" ng-hide="account.markedForDelete != -1" 
                           ng-click="$location.url('/account/history/' + account.aid + '/' + account.characterType + '/' + account.name)">Sync History</button>
                   <button type="button" class="btn btn-default" ng-hide="account.markedForDelete != -1" ng-click="sendSyncRequest(account);">Sync Now</button>
-                  <a href="{{'/snapshot?acct=' + account.aid}}" target="_blank" class="btn btn-default" role="button">Download Latest Snapshot</a>
+                  <a href="{{'snapshot?acct=' + account.aid}}" target="_blank" class="btn btn-default" role="button">Download Latest Snapshot</a>
                   <button type="button" class="btn btn-default" ng-hide="account.markedForDelete != -1" 
                           ng-click="$location.url('/access/view/' + account.aid + '/' + account.characterType + '/' + account.name + '/' + account.eveCharacterName + '/' + account.eveCorporationName + '/' + account.eveCharacterID + '/' + account.eveCorporationID)">Access Keys</button>
                   <button type="button" class="btn btn-default" ng-hide="account.markedForDelete != -1" ng-click="$location.url('/account/mod/' + account.aid)">Modify</button>
