--- a/src/main/webapp/partials/api-model.html
+++ b/src/main/webapp/partials/api-model.html
@@ -2,7 +2,7 @@
 
 <div id="swagger-ui-row" class="row col-wrap">
   <div id="swagger-ui-model-holder" class="col-md-12">
-  <iframe src="vendor/swagger-ui-2.1.4/swagger.html?url=${enterprises.orbital.evekit.frontend.swaggerui.model}" 
+  <iframe ng-src="{{urlExtra}}" 
           id="api-model" 
           style="width: 100%;">
   </iframe>
