- add support for new Clones and Skills endpoints

--- a/src/main/webapp/partials/account-history.html
+++ b/src/main/webapp/partials/account-history.html
@@ -29,6 +29,7 @@
             <td><div class="sync-history-cont"><div title="Bookmarks Status" class="history-label history-label-rot">Bookmarks</div></div></td>
             <td><div class="sync-history-cont"><div title="Calendar Event Attendees Status" class="history-label history-label-rot">Calendar</div></div></td>
             <td><div class="sync-history-cont"><div title="Character Sheet Status" class="history-label history-label-rot">Sheet</div></div></td>
+            <td><div class="sync-history-cont"><div title="Partial Character Sheet Status (Clones)" class="history-label history-label-rot">Partial Sheet</div></div></td>
             <td><div class="sync-history-cont"><div title="Chat Channels Status" class="history-label history-label-rot">Chat</div></div></td>
             <td><div class="sync-history-cont"><div title="Contact List Status" class="history-label history-label-rot">Contacts</div></div></td>
             <td><div class="sync-history-cont"><div title="Contact Notifications Status" class="history-label history-label-rot">Contact Notes</div></div></td>
@@ -49,6 +50,7 @@
             <td><div class="sync-history-cont"><div title="Research Status" class="history-label history-label-rot">Research</div></div></td>
             <td><div class="sync-history-cont"><div title="Skill In Training Status" class="history-label history-label-rot">In Training</div></div></td>
             <td><div class="sync-history-cont"><div title="Skill Queue Status" class="history-label history-label-rot">Skill Queue</div></div></td>
+            <td><div class="sync-history-cont"><div title="Partial Character Sheet Status (Skills)" class="history-label history-label-rot">Skills</div></div></td>
             <td><div class="sync-history-cont"><div title="Standings Status" class="history-label history-label-rot">Standings</div></div></td>
             <td><div class="sync-history-cont"><div title="Upcoming Calendar Events Status" class="history-label history-label-rot">Upcoming</div></div></td>
             <td><div class="sync-history-cont"><div title="Wallet Journal Status" class="history-label history-label-rot">Journal</div></div></td>
@@ -93,6 +95,8 @@
           <tr ng-hide="!isChar">
             <td align="center" class="history-spacer">YYYY-MM-DD HH:MM:SS</td>
             <td align="center" class="history-spacer">YYYY-MM-DD HH:MM:SS</td>
+            <td class="sync-history-spacer"></td>
+            <td class="sync-history-spacer"></td>
             <td class="sync-history-spacer"></td>
             <td class="sync-history-spacer"></td>
             <td class="sync-history-spacer"></td>
