- Clarify availability of book data

--- a/src/main/webapp/partials/md-book.html
+++ b/src/main/webapp/partials/md-book.html
@@ -10,7 +10,8 @@
                     This viewer uses the EveKit market data endpoints to retrieve the order book
                     for the given date and time, as well as market history for up to 90 days
                     prior to the given date.  Order locations which are outposts are not resolved
-                    at the moment (they will display as "RESOLVING").
+                    at the moment (they will display as "RESOLVING").  Book data is available
+                    back to 2016-05-31.
                     <br/>
                     <br/>
                     <div class="input-group">
