- final prep for 2.1.0 release

--- a/src/main/webapp/partials/account-history.html
+++ b/src/main/webapp/partials/account-history.html
@@ -39,6 +39,7 @@
             <td><div class="sync-history-cont"><div title="Faction Warfare Stats Status" class="history-label history-label-rot">FacWar</div></div></td>
             <td><div class="sync-history-cont"><div title="Industry Job Status" class="history-label history-label-rot">Industry</div></div></td>
             <td><div class="sync-history-cont"><div title="Kill Log Status" class="history-label history-label-rot">Kills</div></div></td>
+            <td><div class="sync-history-cont"><div title="Locations Status" class="history-label history-label-rot">Locations</div></div></td>
             <td><div class="sync-history-cont"><div title="Mail Bodies Status" class="history-label history-label-rot">Mail Bodies</div></div></td>
             <td><div class="sync-history-cont"><div title="Mailing Lists Status" class="history-label history-label-rot">Mailing Lists</div></div></td>
             <td><div class="sync-history-cont"><div title="Mail Messages Status" class="history-label history-label-rot">Mail Msgs</div></div></td>
@@ -77,6 +78,7 @@
             <td><div class="sync-history-cont"><div title="Faction Warfare Stats Status" class="history-label history-label-rot">FacWar</div></div></td>
             <td><div class="sync-history-cont"><div title="Industry Job Status" class="history-label history-label-rot">Industry</div></div></td>
             <td><div class="sync-history-cont"><div title="Kill Log Status" class="history-label history-label-rot">Kills</div></div></td>
+            <td><div class="sync-history-cont"><div title="Locations Status" class="history-label history-label-rot">Locations</div></div></td>
             <td><div class="sync-history-cont"><div title="Market Order Status" class="history-label history-label-rot">Market</div></div></td>
             <td><div class="sync-history-cont"><div title="Member Medals Status" class="history-label history-label-rot">Member Medals</div></div></td>
             <td><div class="sync-history-cont"><div title="Member Security Status" class="history-label history-label-rot">Member Security</div></div></td>
@@ -128,11 +130,13 @@
             <td class="sync-history-spacer"></td>
             <td class="sync-history-spacer"></td>
             <td class="sync-history-spacer"></td>
+            <td class="sync-history-spacer"></td>
             <td style="width: 14px"></td>
           </tr>          
           <tr ng-hide="isChar">
             <td align="center" class="history-spacer">YYYY-MM-DD HH:MM:SS</td>
             <td align="center" class="history-spacer">YYYY-MM-DD HH:MM:SS</td>
+            <td class="sync-history-spacer"></td>
             <td class="sync-history-spacer"></td>
             <td class="sync-history-spacer"></td>
             <td class="sync-history-spacer"></td>
