--- a/src/main/webapp/partials/admin-inflight.html
+++ b/src/main/webapp/partials/admin-inflight.html
@@ -28,6 +28,7 @@
             <td><div class="sync-history-cont"><div title="Bookmarks Status" class="history-label history-label-rot">Bookmarks</div></div></td>
             <td><div class="sync-history-cont"><div title="Calendar Event Attendees Status" class="history-label history-label-rot">Calendar</div></div></td>
             <td><div class="sync-history-cont"><div title="Character Sheet Status" class="history-label history-label-rot">Sheet</div></div></td>
+            <td><div class="sync-history-cont"><div title="Partial Character Sheet Status (Clones)" class="history-label history-label-rot">Partial Sheet</div></div></td>
             <td><div class="sync-history-cont"><div title="Chat Channels Status" class="history-label history-label-rot">Chat</div></div></td>
             <td><div class="sync-history-cont"><div title="Contact List Status" class="history-label history-label-rot">Contacts</div></div></td>
             <td><div class="sync-history-cont"><div title="Contact Notifications Status" class="history-label history-label-rot">Contact Notes</div></div></td>
@@ -37,6 +38,7 @@
             <td><div class="sync-history-cont"><div title="Faction Warfare Stats Status" class="history-label history-label-rot">FacWar</div></div></td>
             <td><div class="sync-history-cont"><div title="Industry Job Status" class="history-label history-label-rot">Industry</div></div></td>
             <td><div class="sync-history-cont"><div title="Kill Log Status" class="history-label history-label-rot">Kills</div></div></td>
+            <td><div class="sync-history-cont"><div title="Locations Status" class="history-label history-label-rot">Locations</div></div></td>
             <td><div class="sync-history-cont"><div title="Mail Bodies Status" class="history-label history-label-rot">Mail Bodies</div></div></td>
             <td><div class="sync-history-cont"><div title="Mailing Lists Status" class="history-label history-label-rot">Mailing Lists</div></div></td>
             <td><div class="sync-history-cont"><div title="Mail Messages Status" class="history-label history-label-rot">Mail Msgs</div></div></td>
@@ -48,6 +50,7 @@
             <td><div class="sync-history-cont"><div title="Research Status" class="history-label history-label-rot">Research</div></div></td>
             <td><div class="sync-history-cont"><div title="Skill In Training Status" class="history-label history-label-rot">In Training</div></div></td>
             <td><div class="sync-history-cont"><div title="Skill Queue Status" class="history-label history-label-rot">Skill Queue</div></div></td>
+            <td><div class="sync-history-cont"><div title="Partial Character Sheet Status (Skills)" class="history-label history-label-rot">Skills</div></div></td>
             <td><div class="sync-history-cont"><div title="Standings Status" class="history-label history-label-rot">Standings</div></div></td>
             <td><div class="sync-history-cont"><div title="Upcoming Calendar Events Status" class="history-label history-label-rot">Upcoming</div></div></td>
             <td><div class="sync-history-cont"><div title="Wallet Journal Status" class="history-label history-label-rot">Journal</div></div></td>
@@ -96,6 +99,7 @@
             <td><div class="sync-history-cont"><div title="Faction Warfare Stats Status" class="history-label history-label-rot">FacWar</div></div></td>
             <td><div class="sync-history-cont"><div title="Industry Job Status" class="history-label history-label-rot">Industry</div></div></td>
             <td><div class="sync-history-cont"><div title="Kill Log Status" class="history-label history-label-rot">Kills</div></div></td>
+            <td><div class="sync-history-cont"><div title="Locations Status" class="history-label history-label-rot">Locations</div></div></td>
             <td><div class="sync-history-cont"><div title="Market Order Status" class="history-label history-label-rot">Market</div></div></td>
             <td><div class="sync-history-cont"><div title="Member Medals Status" class="history-label history-label-rot">Member Medals</div></div></td>
             <td><div class="sync-history-cont"><div title="Member Security Status" class="history-label history-label-rot">Member Security</div></div></td>
