--- a/src/main/webapp/partials/main-news.html
+++ b/src/main/webapp/partials/main-news.html
@@ -162,7 +162,7 @@
       <ul>
       <li> EveKit is provided by Dark Planet Ventures (DPVT), a one player - multiple alts extremely tiny EVE corporation.
       <li> Federated login decals from <a href='https://github.com/necolas/css3-social-signin-buttons' target="_blank">CSS3 Social Signin Buttons</a>.
-      <li> Static EVE data is converted from CCP's export using <a href="https://bitbucket.org/Desmont_McCallock/evesdetosql" target="_blank">Desmont McCallock's EVE SDE to SQL</a> tool. 
+      <li> Static EVE data is generated from <a href="https://www.fuzzwork.co.uk/" target="_blank">Fuzzy Steve's</a> <a href="https://www.fuzzwork.co.uk/dump/" target="_blank">SQL SDE conversions</a>.
       <li> Last but not least, many thanks to the contributors and documentors at the <a href='http://eveonline-third-party-documentation.readthedocs.org/' target="_blank">EVE Third Party Documentation Project</a>. 
       </ul>
       </div>
