remove xml proxy service

--- a/src/main/webapp/partials/main-news.html
+++ b/src/main/webapp/partials/main-news.html
@@ -7,8 +7,8 @@
         <h3 class="panel-title">Welcome to EveKit!</h3>
       </div>
       <div class="panel-body col-extend">
-      EveKit is a web-based toolkit for building applications based on the EVE Online third party APIs and EVE Online static data export.
-      EveKit provides four main services (use the toolbar above to switch between services):
+      EveKit is a web-based toolkit for building applications based on the EVE Online third party APIs.
+      EveKit provides the following services (use the toolbar above to switch between services):
  
       <table style="border-collapse: collapse; border: 0px; margin-top: 1em; margin-bottom: 1em;">
       <tr>
@@ -21,18 +21,6 @@
         <td style="padding-left: 20px; padding-bottom: 10px;">
         Keep an up to date copy of your character and corporation data on the web, 
         with convenient APIs for access from your own applications.
-        </td>
-      </tr>
-      <tr>
-        <td nowrap align="right" valign="middle" style="padding-bottom: 10px;">
-        <i class="fa fa-exchange fa-2x"></i>
-        </td>
-        <td nowrap align="right" valign="middle" style="padding-left: 20px; padding-bottom: 10px;">
-        <strong>EVE XML API Proxy</strong>
-        </td>
-        <td style="padding-left: 20px; padding-bottom: 10px;">
-        Use our proxy to the EVE XML API endpoints, perhaps because you want to work with JSON, or if your
-        favorite language doesn't yet have a library for accessing the endpoints.
         </td>
       </tr>
       <tr>
@@ -82,7 +70,7 @@
         </td>
         <td style="padding-left: 10px; padding-bottom: 10px;">
         EveKit account synchronization can download for both characters and corporations, at least as frequently as 
-        the EVE XML API cache timers allow.
+        the EVE API cache timers allow.
         </td>
       </tr>
       <tr>
