--- a/src/main/webapp/partials/admin-ref-history.html
+++ b/src/main/webapp/partials/admin-ref-history.html
@@ -11,55 +11,36 @@
         </table>
       </div>
       
-      <div class="panel-body">
+      <div class="panel-body" style="overflow-x: scroll">
       
-      <table style="width: 100%; padding: 0px; border-collapse: separate; border-spacing: 4px; border: 0px;">
+      <table id="refHistoryScrollTable" style="width: 680px; padding: 0px; border-collapse: separate; border-spacing: 4px; border: 0px;">
+        <thead style="display: block;">
           <tr>
-            <td align="center" valign="bottom" class="history-label">Sync Start</td>
-            <td align="center" valign="bottom" class="history-label">Sync End</td>
-            <td><div class="sync-history-cont"><div title="Server Status Status" class="history-label history-label-rot">Server Status</div></div></td>
-            <td><div class="sync-history-cont"><div title="API Call List Status" class="history-label history-label-rot">API Calls</div></div></td>
-            <td><div class="sync-history-cont"><div title="Alliance List Status" class="history-label history-label-rot">Alliances</div></div></td>
-            <td><div class="sync-history-cont"><div title="Conqerable Station List Status" class="history-label history-label-rot">Conq. Stations</div></div></td>
-            <td><div class="sync-history-cont"><div title="Error List Status" class="history-label history-label-rot">Error List</div></div></td>
-            <td><div class="sync-history-cont"><div title="Faction War Stats Status" class="history-label history-label-rot">Fac. War Stats</div></div></td>
-            <td><div class="sync-history-cont"><div title="Faction War Top Stats Status" class="history-label history-label-rot">Fac. War Top Stats</div></div></td>
-            <td><div class="sync-history-cont"><div title="Ref Types Status" class="history-label history-label-rot">Ref Types</div></div></td>
-            <td><div class="sync-history-cont"><div title="Skill Tree Status" class="history-label history-label-rot">Skill Tree</div></div></td>
-            <td><div class="sync-history-cont"><div title="Faction War Systems Status" class="history-label history-label-rot">Fac. War Systems</div></div></td>
-            <td><div class="sync-history-cont"><div title="Map Jumps Status" class="history-label history-label-rot">Map Jumps</div></div></td>
-            <td><div class="sync-history-cont"><div title="Map Kills Status" class="history-label history-label-rot">Map Kills</div></div></td>
-            <td><div class="sync-history-cont"><div title="Sovereignty Status" class="history-label history-label-rot">Sovereignty</div></div></td>
-            <td style="width: 14px"></td>
+            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap;">Sync Start</td>
+            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap;">Sync End</td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Server Status Status" class="history-label history-label-rot">Server Status</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="API Call List Status" class="history-label history-label-rot">API Calls</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Alliance List Status" class="history-label history-label-rot">Alliances</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Conqerable Station List Status" class="history-label history-label-rot">Conq. Stations</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Error List Status" class="history-label history-label-rot">Error List</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Faction War Stats Status" class="history-label history-label-rot">Fac. War Stats</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Faction War Top Stats Status" class="history-label history-label-rot">Fac. War Top Stats</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Ref Types Status" class="history-label history-label-rot">Ref Types</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Skill Tree Status" class="history-label history-label-rot">Skill Tree</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Faction War Systems Status" class="history-label history-label-rot">Fac. War Systems</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Map Jumps Status" class="history-label history-label-rot">Map Jumps</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Map Kills Status" class="history-label history-label-rot">Map Kills</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Sovereignty Status" class="history-label history-label-rot">Sovereignty</div></div></td>
           </tr>
-          <tr>
-            <td align="center" class="history-spacer">YYYY-MM-DD HH:MM:SS</td>
-            <td align="center" class="history-spacer">YYYY-MM-DD HH:MM:SS</td>
-            <td class="sync-history-spacer"></td>
-            <td class="sync-history-spacer"></td>
-            <td class="sync-history-spacer"></td>
-            <td class="sync-history-spacer"></td>
-            <td class="sync-history-spacer"></td>
-            <td class="sync-history-spacer"></td>
-            <td class="sync-history-spacer"></td>
-            <td class="sync-history-spacer"></td>
-            <td class="sync-history-spacer"></td>
-            <td class="sync-history-spacer"></td>
-            <td class="sync-history-spacer"></td>
-            <td class="sync-history-spacer"></td>
-            <td class="sync-history-spacer"></td>
-            <td style="width: 14px"></td>
-          </tr>          
+        </thead>
+        <tbody id="refHistoryScroll" style="display: block; overflow-y: scroll;">
+        <tr ng-repeat="his in syncHistory">
+          <td align="center" class="entry-label" style="white-space: nowrap;">{{getStartTime(his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
+          <td align="center" class="entry-label" style="white-space: nowrap;">{{getEndTime(his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
+          <td ng-repeat="stat in statusPointerArray" class="{{determineRefHistoryClass(his, $index)}}" style="width: 26px;" title="{{determineRefHistoryTitle(his, $index)}}"></td>
+        </tr>
+        </tbody>
       </table>
-      <div id="refHistoryScroll" style="overflow-y: scroll; overflow-x: hidden; z-index: 1; margin-top: -21px;">
-      <table id="refHistoryScrollTable" style="width: 100%; padding: 0px; border-collapse: separate; border-spacing: 4px; border: 0px;">
-          <tr ng-repeat="his in syncHistory">
-            <td align="center" class="entry-label">{{getStartTime(his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
-            <td align="center" class="entry-label">{{getEndTime(his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
-            <td ng-repeat="stat in statusPointerArray" class="{{determineRefHistoryClass(his, $index)}}" title="{{determineRefHistoryTitle(his, $index)}}"></td>
-          </tr>
-      </table>
-      </div>
 
       </div>
     </div>
